--- a/test.html
+++ b/test.html
@@ -1,5 +1,7 @@
- <video controls loop>
+<body>
+<video controls loop>
   <source src="kaidotwerk.mp4" type="video/mp4">
   <source src="kaidotwerk" type="video/ogg">
   Your browser does not support the video tag.
 </video> 
+ </body>
